--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 Django==4.2.5
+django-phone-field==1.8.1
+django-phonenumber-field==7.2.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
