--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 asgiref==3.7.2
+bleach==6.1.0
 Django==4.2.5
 django-phone-field==1.8.1
 django-phonenumber-field==7.2.0
+django-post-office==3.8.0
+pytz==2023.3.post1
+six==1.16.0
 sqlparse==0.4.4
+tinycss2==1.2.1
 typing_extensions==4.8.0
 tzdata==2023.3
+webencodings==0.5.1
