--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,27 @@ Django==4.2.5
 django-phone-field==1.8.1
 django-phonenumber-field==7.2.0
 django-post-office==3.8.0
+flake8==7.1.1
+flake8-broken-line==1.0.0
+flake8-isort==6.1.1
+flake8-plugin-utils==1.3.3
+flake8-return==1.2.0
+isort==5.13.2
+mccabe==0.7.0
+mypy==1.11.2
+mypy-extensions==1.0.0
+pep8-naming==0.14.1
+pillow==10.4.0
+pycodestyle==2.12.1
+pyfiglet==1.0.2
+pyflakes==3.2.0
 pytz==2023.3.post1
+pywin32==306
 six==1.16.0
 sqlparse==0.4.4
 tinycss2==1.2.1
-typing_extensions==4.8.0
+tomli==2.0.1
+typing_extensions==4.12.2
 tzdata==2023.3
 webencodings==0.5.1
+wcwidth==0.2.13
